Bad motion blur behavior in Cycles when using Speed effect in Sequencer #49341

Closed
opened 2016-09-13 16:14:28 +02:00 by Vladislav Turbanov · 12 comments

System Information
Windows 7

Blender Version
Broken: 2.77a

Short description of error

The motion blur produces a weird lagging effect. This may be caused by the usage of exactly the integer frame's center time value (5), not the subframe one (5.251).
The shutter speed should also be scaled according to current Speed value.

Exact steps for others to reproduce the error

  1. Add a scene strip to Sequencer.
  2. Add the Speed Control strip.
  3. Uncheck the Stretch... flag and lower the Speed factor.

Open the cycles-motion-blur-slow-motion-bug-demo.blend file and render the scene, or watch this video on YouTube : https://www.youtube.com/watch?v=VVCgGxCydH0

**System Information** Windows 7 **Blender Version** Broken: 2.77a **Short description of error** The motion blur produces a weird lagging effect. This may be caused by the usage of exactly the integer frame's center time value (5), not the subframe one (5.251). The shutter speed should also be scaled according to current Speed value. **Exact steps for others to reproduce the error** 1. Add a scene strip to Sequencer. 2. Add the Speed Control strip. 3. Uncheck the Stretch... flag and lower the Speed factor. Open the [cycles-motion-blur-slow-motion-bug-demo.blend](https://archive.blender.org/developer/F359411/cycles-motion-blur-slow-motion-bug-demo.blend) file and render the scene, or watch this video on YouTube : https://www.youtube.com/watch?v=VVCgGxCydH0

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @VladislavDmitrievichTurbanov

Added subscriber: @VladislavDmitrievichTurbanov

Added subscriber: @Sergey

Added subscriber: @Sergey
Sergey Sharybin self-assigned this 2016-09-14 14:51:05 +02:00

Have a fix for it, testing it now.

Have a fix for it, testing it now.

This issue was referenced by blender/cycles@f8fd0b98f3

This issue was referenced by blender/cycles@f8fd0b98f34577bba62d943e7f5d37b8b4a781ca

This issue was referenced by ab6a3dd6c1

This issue was referenced by ab6a3dd6c150d0842d39e6a09b44b806ae2c53c1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

In #49341#391668, @Sergey wrote:
Have a fix for it, testing it now.

Chances will be comitted this week? (Need to estimate production times)

> In #49341#391668, @Sergey wrote: > Have a fix for it, testing it now. Chances will be comitted this week? (Need to estimate production times)

It was already committed. Think it's even safe for upcoming 2.78-rc2.

It was already committed. Think it's even safe for upcoming 2.78-rc2.

In #49341#391705, @Sergey wrote:
It was already committed. Think it's even safe for upcoming 2.78-rc2.

Great job! How about an automatic scaling for motion blur's shutter speed? Is it feasable to implement?

> In #49341#391705, @Sergey wrote: > It was already committed. Think it's even safe for upcoming 2.78-rc2. Great job! How about an automatic scaling for motion blur's shutter speed? Is it feasable to implement?

Not easily. Not in the current design of how VSE works at least.

Not easily. Not in the current design of how VSE works at least.

In #49341#391707, @Sergey wrote:
Not easily. Not in the current design of how VSE works at least.

How about making a shutter speed animateable at least?

> In #49341#391707, @Sergey wrote: > Not easily. Not in the current design of how VSE works at least. How about making a shutter speed animateable at least?
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49341
No description provided.