Fix T49341: Bad motion blur behavior in Cycles when using Speed effect in Sequencer

Cycles was thinking it always rendering integer frame, which is not correct.